--- a/wiki/cs/Manual;The_FreeCAD_document.html
+++ b/wiki/cs/Manual;The_FreeCAD_document.html
@@ -74,8 +74,8 @@
 </p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_022_Document.png&amp;filetimestamp=20240614225907&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_022_Document.png" decoding="async" width="1897" height="1078" class="mw-file-element" data-file-width="1897" data-file-height="1078"></a></span>
 </p><p><b>Dal&scaron;&iacute; informace:</b>
 </p>
-<ul><li><a href="../Document_structure.html" title="Document structure">The FreeCAD document</a></li>
-<li><a href="../File_Format_FCStd.html" title="File Format FCStd">File Format FCStd</a></li></ul>
+<ul><li><a href="../Document_structure.html" title="Document structure">Dokument FreeCADu</a></li>
+<li><a href="../File_Format_FCStd.html" title="File Format FCStd">Form&aacute;t souboru FCStd</a></li></ul>
 <p><br>
 </p>
 <div class="docnav">
@@ -87,12 +87,12 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112051117
+Cached time: 20260112051159
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.050 seconds
-Real time usage: 0.076 seconds
+CPU time usage: 0.055 seconds
+Real time usage: 0.140 seconds
 Preprocessor visited node count: 79/1000000
 Post&#8208;expand include size: 8274/2097152 bytes
 Template argument size: 704/2097152 bytes
@@ -103,13 +103,13 @@ Unstrip post&#8208;expand size: 2643/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    8.046      1 -total
- 72.65%    5.845      1 Template:Manual:TOC
- 57.23%    4.605      1 Manual:Summary/cs
- 22.88%    1.841      2 Template:Docnav
+100.00%   14.978      1 -total
+ 81.57%   12.218      1 Template:Manual:TOC
+ 64.62%    9.678      1 Manual:Summary/cs
+ 16.25%    2.434      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410698-0!canonical and timestamp 20260112051117 and revision id 1737122. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410698-0!canonical and timestamp 20260112051159 and revision id 1737125. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
