--- a/wiki/cs/Manual;Parametric_objects.html
+++ b/wiki/cs/Manual;Parametric_objects.html
@@ -12,8 +12,8 @@
 <li><a href="../ja/Manual;Parametric_objects.html" class="mw-pt-progress mw-pt-progress--low" title="&#12510;&#12491;&#12517;&#12450;&#12523;&#65306;&#12497;&#12521;&#12513;&#12488;&#12522;&#12483;&#12463;&#12539;&#12458;&#12502;&#12472;&#12455;&#12463;&#12488; (5% translated)" lang="ja" dir="ltr">&#26085;&#26412;&#35486;</a></li>
 <li><a href="../ko/Manual;Parametric_objects.html" class="mw-pt-progress mw-pt-progress--complete" title="&#49444;&#47749;&#49436;:&#54028;&#46972;&#47700;&#53944;&#47533; &#44061;&#52404; (100% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
 <div class="docnav">
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../Manual;The_FreeCAD_document.html" title="Manual:The FreeCAD document">The FreeCAD document</a></div>
-    <div><a href="../Manual;Import_and_export_to_other_filetypes.html" title="Manual:Import and export to other filetypes">Import and export to other file types</a>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../Manual;The_FreeCAD_document.html" title="Manual:The FreeCAD document">Dokument FreeCADu</a></div>
+    <div><a href="../Manual;Import_and_export_to_other_filetypes.html" title="Manual:Import and export to other filetypes">Import a export do jin&yacute;ch form&aacute;t&#367; soubor&#367;</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../Manual;Introduction.html" title="Manual:Introduction">Manual start</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Crystal_Clear_manual.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="128" data-file-height="128"></span></span></div>
@@ -101,15 +101,15 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112051314
+Cached time: 20260112051405
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.060 seconds
-Real time usage: 0.109 seconds
+CPU time usage: 0.053 seconds
+Real time usage: 0.115 seconds
 Preprocessor visited node count: 81/1000000
-Post&#8208;expand include size: 8474/2097152 bytes
-Template argument size: 838/2097152 bytes
+Post&#8208;expand include size: 8489/2097152 bytes
+Template argument size: 848/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -117,14 +117,14 @@ Unstrip post&#8208;expand size: 2645/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   11.970      1 -total
- 60.63%    7.258      1 Template:Manual:TOC
- 45.10%    5.399      1 Manual:Summary/cs
- 25.34%    3.033      2 Template:Docnav
- 10.86%    1.300      2 Template:MenuCommand
+100.00%   17.077      1 -total
+ 60.20%   10.281      1 Template:Manual:TOC
+ 41.23%    7.040      1 Manual:Summary/cs
+ 23.46%    4.006      2 Template:Docnav
+ 10.44%    1.782      2 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410708-0!canonical and timestamp 20260112051314 and revision id 1737127. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410708-0!canonical and timestamp 20260112051405 and revision id 1737129. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
