--- a/wiki/cs/Manual;Parametric_objects.html
+++ b/wiki/cs/Manual;Parametric_objects.html
@@ -6,7 +6,7 @@
 <li><a href="../it/Manual;Parametric_objects.html" class="mw-pt-progress mw-pt-progress--complete" title="Manuale: Gli oggetti Parametrici (100% translated)" lang="it" dir="ltr">italiano</a></li>
 <li><a href="../pl/Manual;Parametric_objects.html" class="mw-pt-progress mw-pt-progress--complete" title="Podr&#281;cznik:Obiekty parametryczne (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ro/Manual;Parametric_objects.html" class="mw-pt-progress mw-pt-progress--med" title="Manual:obiecte parametrice (15% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--low" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
 <li><a href="../ru/Manual;Parametric_objects.html" class="mw-pt-progress mw-pt-progress--complete" title="&#1056;&#1091;&#1082;&#1086;&#1074;&#1086;&#1076;&#1089;&#1090;&#1074;&#1086;:&#1055;&#1072;&#1088;&#1072;&#1084;&#1077;&#1090;&#1088;&#1080;&#1095;&#1077;&#1089;&#1082;&#1080;&#1077; &#1086;&#1073;&#1098;&#1077;&#1082;&#1090;&#1099; (100% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../zh-cn/Manual;Parametric_objects.html" class="mw-pt-progress mw-pt-progress--med" title="&#25163;&#20876;&#65306;&#21442;&#25968;&#21270;&#23545;&#35937; (30% translated)" lang="zh-Hans-CN" dir="ltr">&#20013;&#25991;&#65288;&#20013;&#22269;&#22823;&#38470;&#65289;</a></li>
 <li><a href="../ja/Manual;Parametric_objects.html" class="mw-pt-progress mw-pt-progress--low" title="&#12510;&#12491;&#12517;&#12450;&#12523;&#65306;&#12497;&#12521;&#12513;&#12488;&#12522;&#12483;&#12463;&#12539;&#12458;&#12502;&#12472;&#12455;&#12463;&#12488; (5% translated)" lang="ja" dir="ltr">&#26085;&#26412;&#35486;</a></li>
@@ -93,23 +93,23 @@
 <p><br>
 </p>
 <div class="docnav">
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../Manual;The_FreeCAD_document.html" title="Manual:The FreeCAD document">The FreeCAD document</a></div>
-    <div><a href="../Manual;Import_and_export_to_other_filetypes.html" title="Manual:Import and export to other filetypes">Import and export to other file types</a>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../Manual;The_FreeCAD_document.html" title="Manual:The FreeCAD document">Dokument FreeCADu</a></div>
+    <div><a href="../Manual;Import_and_export_to_other_filetypes.html" title="Manual:Import and export to other filetypes">Import a export do jin&yacute;ch form&aacute;t&#367; soubor&#367;</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../Manual;Introduction.html" title="Manual:Introduction">Manual start</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Crystal_Clear_manual.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="128" data-file-height="128"></span></span></div>
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112051405
+Cached time: 20260112051417
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.053 seconds
+CPU time usage: 0.061 seconds
 Real time usage: 0.115 seconds
 Preprocessor visited node count: 81/1000000
-Post&#8208;expand include size: 8489/2097152 bytes
-Template argument size: 848/2097152 bytes
+Post&#8208;expand include size: 8504/2097152 bytes
+Template argument size: 858/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -117,14 +117,14 @@ Unstrip post&#8208;expand size: 2645/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   17.077      1 -total
- 60.20%   10.281      1 Template:Manual:TOC
- 41.23%    7.040      1 Manual:Summary/cs
- 23.46%    4.006      2 Template:Docnav
- 10.44%    1.782      2 Template:MenuCommand
+100.00%   15.409      1 -total
+ 56.41%    8.692      1 Template:Manual:TOC
+ 37.93%    5.845      1 Manual:Summary/cs
+ 24.93%    3.842      2 Template:Docnav
+ 14.69%    2.263      2 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410708-0!canonical and timestamp 20260112051405 and revision id 1737129. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410708-0!canonical and timestamp 20260112051417 and revision id 1737131. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
