--- a/wiki/de/TechDraw_Preferences.html
+++ b/wiki/de/TechDraw_Preferences.html
@@ -4,11 +4,11 @@
 <li><a href="../fr/TechDraw_Preferences.html" class="mw-pt-progress mw-pt-progress--med" title="TechDraw Pr&eacute;f&eacute;rences (69% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../hr/TechDraw_Preferences.html" class="mw-pt-progress mw-pt-progress--low" title="TechDraw Preferences/hr (0% translated)" lang="hr" dir="ltr">hrvatski</a></li>
 <li><a href="../it/TechDraw_Preferences.html" class="mw-pt-progress mw-pt-progress--med" title="Preferenze di TechDraw (31% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><a href="../pl/TechDraw_Preferences.html" class="mw-pt-progress mw-pt-progress--med" title="Rysunek Techniczny: Ustawienia (69% translated)" lang="pl" dir="ltr">polski</a></li>
+<li><a href="../pl/TechDraw_Preferences.html" class="mw-pt-progress mw-pt-progress--complete" title="Rysunek Techniczny: Ustawienia (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ru/TechDraw_Preferences.html" class="mw-pt-progress mw-pt-progress--low" title="&#1053;&#1072;&#1089;&#1090;&#1088;&#1086;&#1081;&#1082;&#1080; TechDraw (11% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../ko/TechDraw_Preferences.html" class="mw-pt-progress mw-pt-progress--med" title="&#44592;&#49696;&#46020;&#47732; &#54872;&#44221;&#49444;&#51221; (48% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
 <div class="docnav">
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../de/TechDraw_Geometric_dimensioning_and_tolerancing.html" title="TechDraw Geometric dimensioning and tolerancing/de">Geometric dimensioning and tolerancing</a></div>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../de/TechDraw_Geometric_dimensioning_and_tolerancing.html" title="TechDraw Geometric dimensioning and tolerancing/de">Form- und Lagetolerierung</a></div>
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Freecad.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="48" data-file-height="48"></span></span></div>
     <div><a href="../de/TechDraw_Workbench.html" title="TechDraw Workbench/de">TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
@@ -308,35 +308,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111162436
+Cached time: 20260112051635
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.130 seconds
-Real time usage: 0.330 seconds
+CPU time usage: 0.123 seconds
+Real time usage: 0.164 seconds
 Preprocessor visited node count: 646/1000000
-Post&#8208;expand include size: 28329/2097152 bytes
-Template argument size: 10652/2097152 bytes
+Post&#8208;expand include size: 28290/2097152 bytes
+Template argument size: 10626/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1715/5000000 bytes
+Unstrip post&#8208;expand size: 1721/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   85.670      1 -total
- 19.53%   16.732      1 Template:KEY
- 15.07%   12.913      1 Template:TechDraw_Tools_navi/de
- 13.63%   11.679      2 Template:MenuCommand
- 13.26%   11.364      1 Template:TOCright
-  9.78%    8.376      2 Template:Navigation_menu_2
-  9.48%    8.124      1 Template:Userdocnavi/de
-  9.34%    7.998     33 Template:Version/de
-  9.08%    7.781      2 Template:Docnav/de
-  7.65%    6.553      2 Template:Button
+100.00%   21.492      1 -total
+ 31.94%    6.864      1 Template:TechDraw_Tools_navi/de
+ 16.33%    3.509      2 Template:Navigation_menu_2
+ 12.75%    2.740      2 Template:Docnav/de
+ 10.86%    2.334     33 Template:Version/de
+  8.84%    1.900      1 Template:Userdocnavi/de
+  7.21%    1.550      2 Template:MenuCommand
+  7.15%    1.536      1 Template:TOCright
+  5.30%    1.139      1 Template:KEY
+  5.25%    1.128      2 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:95107-0!canonical and timestamp 20260111162436 and revision id 1735014. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:95107-0!canonical and timestamp 20260112051635 and revision id 1737133. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
