--- a/wiki/cs/Manual;Parametric_objects.html
+++ b/wiki/cs/Manual;Parametric_objects.html
@@ -75,8 +75,8 @@
 </p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_022_ParametricDesignPocket.png&amp;filetimestamp=20240615001155&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_022_ParametricDesignPocket.png" decoding="async" width="894" height="491" class="mw-file-element" data-file-width="894" data-file-height="491"></a></span>
 </p><p>Pokud se rozhodnete zm&#283;nit n&#283;kter&yacute; z rozm&#283;r&#367; desky nebo kruhu, fin&aacute;ln&iacute; objekt se tak&eacute; zm&#283;n&iacute;. D&iacute;ky pou&#382;it&iacute; parametrick&eacute;ho p&#345;&iacute;stupu k n&aacute;vrhu nen&iacute; nutn&eacute; objekt vytv&aacute;&#345;et znovu od za&#269;&aacute;tku.
 </p>
-<ol><li>Recomputation is not always automatic. Heavy operations, that might modify a big portion of your document, and therefore take some time, are not performed automatically. Instead, the object (and all the objects that depend on it) will be marked for recomputation (a small blue icon appears on them in the tree view). You must then press the recompute button (or <b>Edit-&gt;Refresh</b>) to have all the marked objects recomputed.</li>
-<li>The dependency tree must always flow in the same direction. Loops are forbidden. (See <a href="../Glossary.html#Directed_Acyclic_Graph" title="Glossary">DAG</a>, and <a href="../DAG_view.html" class="mw-redirect" title="DAG view">DAG view</a>) You can have object A which depends on object B which depends on object C. But you cannot have object A which depends on object B which depends on object A. That would be a circular dependency. However, you can have many objects that depend on the same object, for example, objects B and C both depend on A. Menu <b>Tools -&gt; Dependency graph</b> shows you a dependency diagram like on the image above. It can be useful to detect problems.</li></ol>
+<ol><li>P&#345;epo&#269;&iacute;t&aacute;n&iacute; nen&iacute; v&#382;dy automatick&eacute;. N&aacute;ro&#269;n&aacute; operace, kter&aacute; m&#367;&#382;e zm&#283;nit velkou &#269;&aacute;st dokumentu a proto zabere n&#283;jak&yacute; &#269;as, se neprov&aacute;d&iacute; automaticky. M&iacute;sto toho bude objekt (a v&scaron;echny objekty, kter&eacute; na n&#283;m z&aacute;vis&iacute;) ozna&#269;en k p&#345;epo&#269;&iacute;t&aacute;n&iacute; (v zobrazen&iacute; stromu se na nich objev&iacute; mal&aacute; modr&aacute; ikona). Pot&eacute; mus&iacute;te stisknout tla&#269;&iacute;tko p&#345;epo&#269;&iacute;tat (nebo <b>Upravit-&gt;Obnovit</b>), aby byly v&scaron;echny ozna&#269;en&eacute; objekty p&#345;epo&#269;&iacute;t&aacute;ny.</li>
+<li>Strom z&aacute;vislost&iacute; mus&iacute; v&#382;dy sm&#283;&#345;ovat stejn&yacute;m sm&#283;rem. Smy&#269;ky jsou zak&aacute;z&aacute;ny. (viz <a href="../Glossary.html#Directed_Acyclic_Graph" title="Glossary">DAG</a> a <a href="../DAG_view.html" class="mw-redirect" title="DAG view">DAG zobrazen&iacute;</a>). M&#367;&#382;ete m&iacute;t objekt A, kter&yacute; z&aacute;vis&iacute; na objektu B, kter&yacute; z&aacute;vis&iacute; na objektu C. Nem&#367;&#382;ete v&scaron;ak m&iacute;t objekt A, kter&yacute; z&aacute;vis&iacute; na objektu B, kter&yacute; z&aacute;vis&iacute; na objektu A. To by byla cyklick&aacute; z&aacute;vislost. M&#367;&#382;ete v&scaron;ak m&iacute;t mnoho objekt&#367;, kter&eacute; z&aacute;vis&iacute; na stejn&eacute;m objektu, nap&#345;&iacute;klad objekty B a C z&aacute;vis&iacute; na objektu A. Menu <b>N&aacute;stroje -&gt; Graf z&aacute;vislost&iacute;</b> zobraz&iacute; diagram z&aacute;vislost&iacute;, jako na obr&aacute;zku v&yacute;&scaron;e. M&#367;&#382;e b&yacute;t u&#382;ite&#269;n&yacute; pro odhalen&iacute; probl&eacute;m&#367;.</li></ol>
 <p>In FreeCAD's parametric modeling process, examining the dependency tree of an object provides a clear insight into the sequential build and relationships within a model. At the foundation of the structure in the above example is the 'Plate Sketch,' which serves as the base for the initial form of the model. A 'Pad' operation is then applied, which adds material to this foundational sketch, effectively creating a three-dimensional structure from the two-dimensional base.
 </p><p>Following this, a 'Circle Sketch' is drafted on the newly formed surface. This circle forms the basis for the subsequent 'Pocket' operation. The pocket operation strategically removes material from the structure, essentially carving out a portion based on the circle sketch. This process of adding and then subtracting material allows for complex geometries and features to be integrated into the basic model seamlessly.
 </p><p>Through this sequence of operations&mdash;starting from the base sketch, adding volume with a pad, and creating detailed features with additional sketches and pockets&mdash;the final object takes shape. Each step in this chain depends on its predecessor, illustrating the interconnected nature of parametric design in FreeCAD.
@@ -101,15 +101,15 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112052141
+Cached time: 20260112052602
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.061 seconds
-Real time usage: 0.092 seconds
+CPU time usage: 0.058 seconds
+Real time usage: 0.103 seconds
 Preprocessor visited node count: 81/1000000
-Post&#8208;expand include size: 8504/2097152 bytes
-Template argument size: 858/2097152 bytes
+Post&#8208;expand include size: 8512/2097152 bytes
+Template argument size: 866/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -117,14 +117,14 @@ Unstrip post&#8208;expand size: 2645/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   13.642      1 -total
- 62.70%    8.554      1 Template:Manual:TOC
- 45.91%    6.263      1 Manual:Summary/cs
- 22.61%    3.084      2 Template:Docnav
-  9.96%    1.359      2 Template:MenuCommand
+100.00%   10.942      1 -total
+ 64.99%    7.111      1 Template:Manual:TOC
+ 50.05%    5.477      1 Manual:Summary/cs
+ 20.48%    2.241      2 Template:Docnav
+ 10.54%    1.153      2 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410708-0!canonical and timestamp 20260112052141 and revision id 1737146. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410708-0!canonical and timestamp 20260112052602 and revision id 1737148. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
