--- a/wiki/cs/Manual;Import_and_export_to_other_filetypes.html
+++ b/wiki/cs/Manual;Import_and_export_to_other_filetypes.html
@@ -67,7 +67,7 @@
 <li><a href="../Manual;Creating_parametric_objects.html" title="Manual:Creating parametric objects">Creating parametric objects</a></li>
 <li><a href="../Manual;Creating_interface_tools.html" title="Manual:Creating interface tools">Creating interface tools</a></li></ul></li>
 <li><a href="../Manual;The_Community.html" title="Manual:The Community">The community</a></li></ul></div>
-<p>FreeCAD can import and export to many file types. Here is a list of the most important ones with a short description of the available features:
+<p>FreeCAD um&iacute; importovat a exportovat mnoho typ&#367; soubor&#367;. Zde je seznam t&#283;ch nejd&#367;le&#382;it&#283;j&scaron;&iacute;ch s kr&aacute;tk&yacute;m popisem dostupn&yacute;ch funkc&iacute;:
 </p>
 <table class="wikitable" style="width:65%">
 <tbody><tr>
@@ -228,12 +228,12 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112053730
+Cached time: 20260112053805
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.055 seconds
-Real time usage: 0.086 seconds
+CPU time usage: 0.071 seconds
+Real time usage: 0.100 seconds
 Preprocessor visited node count: 73/1000000
 Post&#8208;expand include size: 8340/2097152 bytes
 Template argument size: 744/2097152 bytes
@@ -244,13 +244,13 @@ Unstrip post&#8208;expand size: 3131/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    8.975      1 -total
- 71.45%    6.413      1 Template:Manual:TOC
- 50.53%    4.535      1 Manual:Summary/cs
- 24.67%    2.214      2 Template:Docnav
+100.00%   10.507      1 -total
+ 69.55%    7.308      1 Template:Manual:TOC
+ 55.69%    5.851      1 Manual:Summary/cs
+ 26.29%    2.762      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410729-0!canonical and timestamp 20260112053730 and revision id 1737180. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410729-0!canonical and timestamp 20260112053805 and revision id 1737182. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
